# neophilic-gardener

./: .gitignore  main.py  pyproject.toml
data/processed/: data_cleaned.json
data/raw/: 20260202-data_neophilic_gardener.xlsx
notebooks/: 01-data_cleaning.ipynb  02-new_analysis_1.ipynb  03-new_analysis_2.ipynb
src/: cep_utils.py
