[project]
name = "neophilic-gardener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastparquet>=2025.12.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "kaleido>=1.2.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "plotly-express>=0.4.1",
    "ruff>=0.14.14",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "statsmodels>=0.14.6",
    "xlsxwriter>=3.2.9",
]
